--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,15 @@ repositories {
     mavenCentral()
 }
 dependencies {
+    // build
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
+    annotationProcessor('org.projectlombok:lombok')
+    // test
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
 }
 
