feat: Add save post on SpringJPA
게시판 프로젝트를 위한 데이터 저장소 설정
hibernate mysql innoDB설정 및
jdbc설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok')
     // test
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.projectlombok:lombok')
-    testAnnotationProcessor('org.projectlombok:lombok')
+//    testCompile('org.projectlombok:lombok')
+//    testAnnotationProcessor('org.projectlombok:lombok')
 }
 
