--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 buildscript {
     ext {
-        springBootVersion = '2.2.1.RELEASE' // 2.1.7, 2.1.8, 2.1.9 다 괜찮습니다.
+        springBootVersion = '2.1.7.RELEASE' // 2.1.7, 2.1.8, 2.1.9 다 괜찮습니다.
     }
     repositories {
         mavenCentral()
@@ -42,8 +42,8 @@ dependencies {
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     compile('com.h2database:h2')
-
     annotationProcessor('org.projectlombok:lombok')
     // test
     testCompile('org.springframework.boot:spring-boot-starter-test')
