feat: Init setting up naver OAuth
네이버 로그인 추가를 위해 0Auth 타겟 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+# Logging query
 spring.jpa.show-sql=true
+# Spring jpa set => Mysql innodb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
+# DB console
 spring.h2.console.enabled=true
+# Static web file
 spring.resources.static-locations=classpath:/static/
+# Session storage => rdb
+spring.session.store-type=jdbc
+# ignored by git: .gitignore
 spring.profiles.include=oauth
