--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,12 @@ repositories {
 }
 dependencies {
     // build
-    compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.session:spring-session-jdbc')
     compile('com.h2database:h2')
     annotationProcessor('org.projectlombok:lombok')
     // test
