--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok')
     // test
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 //    testCompile('org.projectlombok:lombok')
 //    testAnnotationProcessor('org.projectlombok:lombok')
 }
