fix: Setting production env
aws rds 배포를 위한 환경설정
- mariaDB(aws rds) 라이브러리 추가
- production DB 설정 추가(ignored: application-real-db.properties)
- 배포스크립트 추가(deploy.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Spring boot Oauth setting
+# Spring boot Oauth/Production setting
 application-oauth.properties
+application-real-db.properties
 
 # Project exclude paths
 /.gradle/
