--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     compile('org.springframework.session:spring-session-jdbc')
     compile('com.h2database:h2')
+    compile('org.mariadb.jdbc:mariadb-java-client')
     annotationProcessor('org.projectlombok:lombok')
     // test
     testCompile('org.springframework.boot:spring-boot-starter-test')
