--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app/step2/zip/
+    destination: /home/ec2-user/app/step3/zip/
     overwrite: yes
 permissions:
   - object: /
@@ -10,7 +10,18 @@ permissions:
     owner: ec2-user
     group: ec2-user
 hooks:
+  # Stop springboot server running without nginx
+  AfterInstall:
+    - location: stop.sh
+      timeout: 60
+      runas: ec2-user
+  # Start springboot server when deployed by Codedeploy from S3
   ApplicationStart:
     - location: deploy.sh
+      timeout: 60
+      runas: ec2-user
+  # Health check after start spirngboot server
+  ValidateService:
+    - location: health.sh
       timeout: 60
       runas: ec2-user
