--- a/build.gradle
+++ b/build.gradle
@@ -54,3 +54,4 @@ dependencies {
 //    testAnnotationProcessor('org.projectlombok:lombok')
 }
 
+version '1.0.1-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
