fix: find_idle_port on profile.sh
fix some error code
- fix unexpected syntax
- check response / up count number
- fix deploy script-appspec.yml: deploy -> start

--- a/appspec.yml
+++ b/appspec.yml
@@ -17,7 +17,7 @@ hooks:
       runas: ec2-user
   # Start springboot server when deployed by Codedeploy from S3
   ApplicationStart:
-    - location: deploy.sh
+    - location: start.sh
       timeout: 60
       runas: ec2-user
   # Health check after start spirngboot server
